--- a/static/global.css
+++ b/static/global.css
@@ -9,9 +9,23 @@ body {
 	margin: 0;
 	padding: 8px;
 	box-sizing: border-box;
+	text-align: center;
+	padding: 1em;
+	margin: 0 auto;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
+h1 {
+	color: #ff3e00;
+	text-transform: uppercase;
+	font-size: 4em;
+	font-weight: 100;
+}
+@media (min-width: 640px) {
+	main {
+		max-width: none;
+	}
+}
 a {
 	color: rgb(0,100,200);
 	text-decoration: none;
